# Simple

./: .gdb  CMakeLists.txt  Makefile  README.md  b.bat  build.bat  compile_commands.json  r.bat  r.sh
Include/: Curve.h  Dnum.h  GPUProgram.h  Object.h  Simple.h  Triangle.h  framework.h  mat4.h  texture.h  vec2.h  vec3.h  vec4.h
Old/: Curve.cpp  CurveGood.cpp  mainDnum.cpp  mainMVP.cpp
Shaders/: fragmentShader.h  vertexShader.h
Simple/Include/: Dnum.h  GLPP.h  GPUProgram.h  HelperFunctions.h  Simple.h  Window.h  texture.h
Simple/Include/Scene/: Camera.h  Light.h  Scene.h
Simple/Include/Scene/RayScene/: Camera.h  Light.h  Material.h  OldScene.h  Ray.h  RayGpuProgam.h  RayScene.h
Simple/Include/Scene/RayScene/Intersectables/: Intersectable.h  Quadratic.h  Sphere.h
Simple/Include/Scene/Scene2D/: Scene2D.h
Simple/Include/Scene/Scene2D/Shapes/: Curve.h  Shape.h  TextureQuad.h  Triangle.cpp
Simple/Include/Scene/Shapes/: Curve.h  Shape.h  Triangle.h
Simple/Include/Shapes/: Curve.h  Intersectable.h  Object.h  Quadratic.h  Shape.h  Sphere.h  TextureQuad.h  Triangle.cpp
Simple/Include/math/: mat4.h  math.h
Simple/Include/math/vectors/: vec3.h  vec4.h
Simple/Include/matrices/: mat4.h
Simple/Include/vectors/: vec.h  vec2.h  vec3.h  vec4.h
Simple/Shaders/: test.glsl  vertex.glsl  vertexShader.h
Simple/Src/: Window.cpp
Simple/Src/Scene/: Scene.cpp
Simple/Src/Scene/Scene2D/: Scene2D.cpp
Simple/Src/Scene/Scene2D/Shapes/: Shape2D.cpp
Simple/Src/Shapes/: Scene.cpp  Shape.cpp
Src/: Curve2.cpp  Skeleton.cpp  framework.cpp  main.cpp  main1.cpp  mainDnum.cpp  mainMVP.cpp  render.cpp
Src/Shapes/: Object.cpp  Triangle.cpp
